* Sat Dec 24 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
- Updated to use the Puppet Concat module

* Thu Dec 15 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.0-0
- Use strongly typed parameters

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.0.0-0
- Updated to use the version of 'simpcat' that does not conflict with
  'puppetlabs/concat'.

* Thu Jul 07 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.1.3-0
- Added missing requires file and updated module to auto-generate
  lua spec file.

* Tue Jun 21 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.2-0
- Ensure that calling '::svckill::ignore' does not include '::svckill' by
  default.

* Tue Apr 12 2016 Kendall Moore <kendall.moore@onyxpoint.com> - 1.1.1-0
- Updated custom type to remove deprecation warning

* Thu Mar 10 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.1.0-0
- Added a 'verbose' option to svckill which will enumerate all actions on
  services if enabled.
- Ensure that all relevant messages are passed back via the 'to_s' method so
  that PuppetDB can obtain a full report.

* Wed Feb 24 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 1.0.0-6
- Minor linting fixes

* Tue Nov 10 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 1.0.0-5
- migration to simplib and simpcat (lib/ only)

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-4
- Changed puppet-server requirement to puppet

* Thu Aug 28 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-3
- Fixed a long-standing bug where failing to stop a service would
  prevent svckill from disabling it.
- Added prefdm to the list of services to never kill.
- Updated to not kill services that have definitions in puppet that
  are aliased in systemd.

* Thu Jun 19 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.0-2
- Added support for systemd